--- a/app/globals.css
+++ b/app/globals.css
@@ -300,7 +300,7 @@ html {
 
 
 .price-head {
-  background-image: url(/_next/static/media/tag2.f387ec20.png);
+  background-image: url(/_next/static/media/tag2.png);
     background-size: 100% auto;
     background-position: 0 0;
     background-repeat: no-repeat;
