--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ html {
 }
 
 .AboutHero {
-  background-image: url("/AboutUs/about.jpeg");
+  background-image: url("/AboutUs/about.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
